update interface and backend